Comentarios del index de  la publiaca

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -35,28 +35,40 @@ TODO importante // realtando algo
     <main> <!-- *Carrusel principal -->
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner carrusel position-relative">
+                <!-- Esta div contiene el contenido del carrusel -->
                 <div class="z-2 position-absolute">
+                    <!-- Esta div se utiliza para posicionar el texto sobre las imágenes -->
                     <div>
                         <h1 class="text-white titillium-web-bold ">
                             ¡Bienvenido a FEASVERSE!
                         </h1>
+                        <!-- Encabezado principal del carrusel -->
                         <h2 class="text-white titillium-web-light">
                             Descubre el mundo del auténtico estilo en zapatillas
                         </h2>
+                        <!-- Subtítulo del carrusel -->
                     </div>
                 </div>
+                <!-- Aquí comienza la sección del carrusel de imágenes -->
                 <div class="carruselA">
+                    <!-- Esta div contiene cada imagen del carrusel -->
                     <div class="carousel-item active">
+                        <!-- La clase "active" indica que esta es la primera imagen visible -->
                         <img src="../../recursos/imagenes/carrusel/sneakers1.svg"
                             class="d-block w-100 opacity-50 imgC1">
+                        <!-- Imagen 1 del carrusel -->
                     </div>
                     <div class="carousel-item">
+                        <!-- Esta div contiene la segunda imagen del carrusel -->
                         <img src="../../recursos/imagenes/carrusel/sneakers2.svg"
                             class="d-block w-100 opacity-50 imgC1">
+                        <!-- Imagen 2 del carrusel -->
                     </div>
                     <div class="carousel-item">
+                        <!-- Esta div contiene la tercera imagen del carrusel -->
                         <img src="../../recursos/imagenes/carrusel/sneakers3.svg"
                             class="d-block w-100 opacity-50 imgC1">
+                        <!-- Imagen 3 del carrusel -->
                     </div>
                 </div>
             </div>
@@ -64,119 +76,137 @@ TODO importante // realtando algo
 
         <!--*Carrusel de marcas-->
         <div class="linea mt-5"></div>
+        <!-- Divisor de línea superior con espacio superior -->
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <!-- Contenedor del carrusel -->
             <div class="carousel-inner">
+                <!-- Inicio del primer ítem del carrusel -->
                 <div class="carousel-item active">
-
+                    <!-- Contenedor de las tarjetas (cards) -->
                     <div class="cards-wrapper">
-
+                        <!-- Tarjeta 1 -->
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
-
+                <!-- Fin del primer ítem del carrusel -->
+                <!-- Inicio del segundo ítem del carrusel -->
                 <div class="carousel-item">
+                    <!-- Contenedor de las tarjetas (cards) -->
                     <div class="cards-wrapper">
-
+                        <!-- Tarjeta 1 -->
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
-
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                                <a href="/vistas/publico/buscador.html"><img
+                                        src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Fin del segundo ítem del carrusel -->
             </div>
+            <!-- Botón para retroceder en el carrusel -->
             <button class="carousel-control-prev a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="prev">
                 <span class="carousel-control-previous" aria-hidden="true">
+                    <!-- Icono de flecha izquierda -->
                     <img src="../../recursos/imagenes/icons/slideizq.svg" alt="">
                 </span>
             </button>
-            <button class="carousel-control-next  a" type="button" data-bs-target="#carouselExampleControls"
+            <!-- Botón para avanzar en el carrusel -->
+            <button class="carousel-control-next a" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="next">
                 <span class="carousel-control-next-" aria-hidden="true">
+                    <!-- Icono de flecha derecha -->
                     <img src="../../recursos/imagenes/icons/slidedrch.svg" alt="">
                 </span>
             </button>
         </div>
+        <!-- Divisor de línea inferior con espacio inferior -->
         <div class="linea mb-5"></div>
 
+
         <!--*Slider de colección más reciente-->
+        <!-- Encabezado de la sección: Nuestra colección más reciente -->
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
+
+        <!-- Contenedor de las tarjetas de la colección -->
         <div class="containerCards d-flex flex-nowrap">
+            <!-- Tarjeta 1 -->
             <div class="card col-4 cardC">
+                <!-- Enlace a la página de detalles del zapato -->
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                    <!-- Contenedor de la imagen del zapato -->
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                        <!-- Imagen del zapato -->
                     </div>
+                    <!-- Línea decorativa debajo de la imagen -->
                     <div class="lineImgC"></div>
+                    <!-- Cuerpo de la tarjeta -->
                     <div class="card-body">
+                        <!-- División de dos columnas -->
                         <div class="d-flex flex-row justify-content-between">
+                            <!-- Columna 1 -->
                             <div class="column1 ps-3">
+                                <!-- Nombre del zapato -->
                                 <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <!-- Descripción del zapato -->
                                     <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
                                 </h1>
-
+                                <!-- División para icono de estrella y calificación -->
                                 <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <!-- Icono de estrella -->
                                     <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                    <!-- Calificación del zapato -->
                                     <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
                                 </div>
                             </div>
-
+                            <!-- Columna 2 -->
                             <div class="column2 align-items-center">
+                                <!-- Número de colores disponibles -->
                                 <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <!-- Precio del zapato -->
                                 <h1 class="titillium-web-bold text25 text-black"> $285</h1>
                             </div>
                         </div>
@@ -269,39 +299,57 @@ TODO importante // realtando algo
             </div>
 
         </div>
+        <!-- Espacio en la parte inferior -->
         <div class="pb-3"></div>
 
         <!--*Slider de seleccion especial-->
+        <!-- Encabezado de la sección: Selección especial de nuestro equipo -->
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Selección especial de nuestro equipo</h1>
+
+        <!-- Contenedor de las tarjetas de la selección especial -->
         <div class="containerCards d-flex flex-nowrap">
+            <!-- Tarjeta 1 -->
             <div class="card col-4 cardC">
+                <!-- Enlace a la página de detalles del zapato -->
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                    <!-- Contenedor de la imagen del zapato -->
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
+                        <!-- Imagen del zapato -->
                     </div>
+                    <!-- Línea decorativa debajo de la imagen -->
                     <div class="lineImgC"></div>
+                    <!-- Cuerpo de la tarjeta -->
                     <div class="card-body">
+                        <!-- División de dos columnas -->
                         <div class="d-flex flex-row justify-content-between">
+                            <!-- Columna 1 -->
                             <div class="column1 ps-3">
+                                <!-- Nombre del zapato -->
                                 <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <!-- Descripción del zapato -->
                                     <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
                                 </h1>
-
+                                <!-- División para icono de estrella y calificación -->
                                 <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <!-- Icono de estrella -->
                                     <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
+                                    <!-- Calificación del zapato -->
                                     <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
                                 </div>
                             </div>
-
+                            <!-- Columna 2 -->
                             <div class="column2 align-items-center">
+                                <!-- Número de colores disponibles -->
                                 <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <!-- Precio del zapato -->
                                 <h1 class="titillium-web-bold text25 text-black"> $285</h1>
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-
+            
             <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
