--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -317,7 +317,11 @@
     <!-- *Llamada al framework de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador del sitio público -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/publico/inicio_sesion.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/privado/index.js"></script>
 </body>
 
 </html>
