--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -96,6 +96,8 @@
                 <h6 class="textoBienvenida titillium-web-regular">Ingresa tu información solicitada a continuación para
                     crear tu cuenta e iniciar</h6>
             </div>
+            <!--Contenedor para FORMULARIO y texto -->
+
             <div class="ContenedorForms">
                 <form class="row needs-validation form1" novalidate>
                     <div class="col-12 ps-5 col-lg-6">
