--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -138,13 +138,18 @@
                         </div>
                     </form>
                 </div>
-                <!-- *Llamada a las hojas de estilos del framework e iconos -->
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-                <!--*Libreria de mensajes-->
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-                <!-- *Llamada al controlador del sitio publico -->
-                <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
-                <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
-                <!-- *Llamada al controlador de la página web -->
-                <script type="text/javascript" src="/controlador/publico/configuraciones.js"></script>
+            </div>
+        </div>
+    </main>
+    <!-- *Llamada a las hojas de estilos del framework e iconos -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- *Llamada al controlador del sitio publico -->
+    <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <!-- *Llamada al controlador de la página web -->
+    <script type="text/javascript" src="/controlador/publico/configuraciones.js"></script>
 </body>
+
+</html>
