--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -129,14 +129,14 @@
                             placeholder="Ingresa la fecha de nacimiento" required>
                     </div>
                     <div class="col-12 ps-5 col-lg-6">
-                        <label for="correoInput" class="form-label ">Dirección</label>
-                        <input type="email" class="form-control bordesAzul" id="correoInput"
+                        <label for="direccionInput" class="form-label ">Dirección</label>
+                        <input type="text" class="form-control bordesAzul" id="direccionInput"
                             placeholder="Ingresa la dirección" required>
                     </div>
                     <div class="col-12 ps-5 pe-lg-5 col-lg-6">
-                        <label for="correoInput" class="form-label ">Contraseña</label>
-                        <input type="email" class="form-control bordesAzul" id="correoInput"
-                            placeholder="Ingresa el correo electronico" required>
+                        <label for="contraInput" class="form-label ">Contraseña</label>
+                        <input type="password" class="form-control bordesAzul" id="contraInput"
+                            placeholder="Ingresa una contraseña" required>
                     </div>
                     <div class="row gx-5 ">
                         <div class="col">
@@ -154,11 +154,11 @@
                             </div>
                         </div>
                     </div>
+                    <label class="text-center col-11 mt-3 mb-2 ms-3" for="olvidaste_clave"> ¿Ya tienes cuenta?
+                        <a class="color-5blue" onclick="showLogIn()">Inicia Sesion</a>
+                    </label>
+                </form>
             </div>
-            <label class="text-center col-11 mt-3 mb-2 ms-3" for="olvidaste_clave"> ¿Ya tienes cuenta?
-                <a class="color-5blue" onclick="showLogIn()">Inicia Sesion</a>
-            </label>
-            </form>
         </div>
         <!-- Formulario para olvidaste contraseña, paso 1 -->
         <div class="row">
@@ -180,8 +180,7 @@
                             <div class="d-flex align-items-center">
                                 <img src="../../recursos/imagenes/correo.svg" class="me-1 mb-2" width="15"
                                     alt="candado">
-                                <label for="correo_electronico_paso1"
-                                    class="form-label titillium-web-regular">Correo
+                                <label for="correo_electronico_paso1" class="form-label titillium-web-regular">Correo
                                     electrónico</label>
                             </div>
                             <input id="correo_electronico_paso1" type="email" name="correo_electronico_paso1"
@@ -229,14 +228,12 @@
                                 </label>
                             </div>
                             <input id="codigoPaso2" type="text" name="codigoRestablecerContra"
-                                class="form-control titillium-web-regular bordesAzul"
-                                placeholder="r37grforiufewf32" required>
+                                class="form-control titillium-web-regular bordesAzul" placeholder="r37grforiufewf32"
+                                required>
                         </div>
                         <!--Contenedor del texto de volver al paso anterior -->
-                        <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                            for="volver">
-                            <a href="javascript:void(0);" onclick="showPass1()"
-                                class="color-5blue">
+                        <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2" for="volver">
+                            <a href="javascript:void(0);" onclick="showPass1()" class="color-5blue">
                                 Volver al paso anterior
                             </a>
                         </label>
@@ -244,8 +241,7 @@
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
-                                    href="javascript:void(0);" onclick="showPass3()"><i
-                                        class="bi bi-send"></i>
+                                    href="javascript:void(0);" onclick="showPass3()"><i class="bi bi-send"></i>
                                     Confirmar código</button>
                             </div>
                         </div>
@@ -274,13 +270,11 @@
                             <div class="d-flex align-items-center">
                                 <img src="../../recursos/imagenes/candado2.svg" class="me-1 mb-2" width="15"
                                     alt="candado">
-                                <label for="clavePaso3"
-                                    class="form-label titillium-web-regular">Contraseña</label>
+                                <label for="clavePaso3" class="form-label titillium-web-regular">Contraseña</label>
                             </div>
                             <!--Contenedor del input de contraseña-->
                             <input id="clavePaso3" type="password" name="clavePaso3"
-                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
-                                required>
+                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●" required>
                         </div>
                         <!--Contenedor del Input de confirmar contraseña -->
                         <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
@@ -293,16 +287,14 @@
                             </div>
                             <!--Contenedor del input de contraseña-->
                             <input id="clave2_paso3" type="password" name="clave2_paso3"
-                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
-                                required>
+                                class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●" required>
                         </div>
                         <div class="mb-2"></div>
                         <!--Contenedor donde estan los botones de restablecer contraseña-->
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
-                                        class="bi bi-send" href="javascript:void(0);"
-                                        onclick="showLogIn()"></i>
+                                        class="bi bi-send" href="javascript:void(0);" onclick="showLogIn()"></i>
                                     Restablecer contraseña</button>
                             </div>
                         </div>
