cambios en tamaño

--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -165,21 +165,23 @@
                     <!-- Formulario para actualizar contraseña -->
                     <form id="passwordForm" name="passwordForm">
                         <div class="modal-body row g-3 d-flex flex-column align-items-center">
-                            <!-- Campos -->
-                            <div class="col-sm-12 col-md-12">
-                                <label for="contraActual" class="form-label">Contraseña actual:</label>
-                                <input id="contraActual" type="password" name="contraActual"
-                                    class="form-control editableInput" required>
-                            </div>
-                            <div class="col-sm-12 col-md-12">
-                                <label for="newContra" class="form-label">Nueva contraseña:</label>
-                                <input id="newContra" type="password" name="newContra"
-                                    class="form-control editableInput" required>
-                            </div>
-                            <div class="col-sm-12 col-md-12">
-                                <label for="confirContra" class="form-label">Confirmar contraseña:</label>
-                                <input id="confirContra" type="password" name="confirContra"
-                                    class="form-control editableInput" required>
+                            <div class="offset-col-1 col-10">
+                                <!-- Campos -->
+                                <div class="col-sm-12 col-md-12">
+                                    <label for="contraActual" class="form-label">Contraseña actual:</label>
+                                    <input id="contraActual" type="password" name="contraActual"
+                                        class="form-control editableInput" required>
+                                </div>
+                                <div class="col-sm-12 col-md-12">
+                                    <label for="newContra" class="form-label">Nueva contraseña:</label>
+                                    <input id="newContra" type="password" name="newContra"
+                                        class="form-control editableInput" required>
+                                </div>
+                                <div class="col-sm-12 col-md-12">
+                                    <label for="confirContra" class="form-label">Confirmar contraseña:</label>
+                                    <input id="confirContra" type="password" name="confirContra"
+                                        class="form-control editableInput" required>
+                                </div>
                             </div>
                             <!-- Botones en el pie del modal -->
                             <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
